--- a/files/GroupsForApp_preloaded_pt.json
+++ b/files/GroupsForApp_preloaded_pt.json
@@ -899,6 +899,7 @@
                 }
             },
             "SendLocation": {
+		"user_consent_prompt": "DataConsent",
                 "rpcs": {
                     "SendLocation": {
                         "hmi_levels": ["BACKGROUND",
@@ -2259,14 +2260,8 @@
             "priority": "NONE",
             "default_hmi": "NONE",
             "groups": [
-              "Notifications",
-              "Location-1",
-              "PropriataryData-1",
-              "Navigation-1",
-              "Base-4",
-              "VehicleInfo-3",
-              "DrivingCharacteristics-3",
-              "Emergency-1"
+              "SendLocation",
+              "DataConsent-2"
             ]
         },
             "device": {
