--- a/files/jsons/Policies/Policy_Table_Update/endpoints_appId.json
+++ b/files/jsons/Policies/Policy_Table_Update/endpoints_appId.json
@@ -13,13 +13,11 @@
             625],
             "endpoints": {
                 "0x07": {
-                    "default": ["http://policies.telematics.ford.com/api/policies"]
+                    "default": ["http://policies.telematics.ford.com/api/policies"],
+		    "0000001": ["http://policies.telematics.ford.com/api/test_apllication"]
                 },
                 "0x04": {
                     "default": ["http://ivsu.software.ford.com/api/getsoftwareupdates"]
-                },
-                "0000001": {
-                    "default": ["http://policies.telematics.ford.com/api/test_apllication"]
                 }
             },
             "notifications_per_minute_by_priority": {
